@@ -1,5 +1,7 @@
 <?php
 namespace LAM\LIB\TWO_FACTOR;
+use DateInterval;
+use DateTime;
 use Exception;
 use \htmlResponsiveRow;
 use \LAM\LOGIN\WEBAUTHN\WebauthnManager;
@@ -18,7 +20,7 @@ use \Webauthn\PublicKeyCredentialCreationOptions;
 
 /*
   This code is part of LDAP Account Manager (http://www.ldap-account-manager.org/)
-  Copyright (C) 2017 - 2020  Roland Gruber
+  Copyright (C) 2017 - 2023  Roland Gruber
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -88,6 +90,13 @@ interface TwoFactorProvider {
 	 * @return bool show submit button
 	 */
 	public function isShowSubmitButton();
+
+	/**
+	 * Returns if the provider supports to remember the device.
+	 *
+	 * @return bool device remembering supported
+	 */
+	public function supportsToRememberDevice(): bool;
 }
 
 /**
@@ -309,6 +318,13 @@ class PrivacyIDEAProvider extends BaseProvider {
 		return false;
 	}
 
+	/**
+	 * @inheritDoc
+	 */
+	public function supportsToRememberDevice(): bool {
+		return true;
+	}
+
 }
 
 /**
@@ -384,6 +400,13 @@ class YubicoProvider extends BaseProvider {
 			}
 		}
 		return false;
+	}
+
+	/**
+	 * @inheritDoc
+	 */
+	public function supportsToRememberDevice(): bool {
+		return true;
 	}
 
 }
@@ -480,6 +503,13 @@ class DuoProvider extends BaseProvider {
 			return true;
 		}
 		logNewMessage(LOG_ERR, 'DUO authentication failed');
+		return false;
+	}
+
+	/**
+	 * @inheritDoc
+	 */
+	public function supportsToRememberDevice(): bool {
 		return false;
 	}
 
@@ -667,6 +697,13 @@ class OktaProvider extends BaseProvider {
 		return $jsonData['access_token'];
 	}
 
+	/**
+	 * @inheritDoc
+	 */
+	public function supportsToRememberDevice(): bool {
+		return false;
+	}
+
 }
 
 /**
@@ -827,6 +864,13 @@ class OpenIdProvider extends BaseProvider {
 		return false;
 	}
 
+	/**
+	 * @inheritDoc
+	 */
+	public function supportsToRememberDevice(): bool {
+		return false;
+	}
+
 }
 
 /**
@@ -953,6 +997,13 @@ class WebauthnProvider extends BaseProvider {
 		}
 	}
 
+	/**
+	 * @inheritDoc
+	 */
+	public function supportsToRememberDevice(): bool {
+		return true;
+	}
+
 }
 
 /**
@@ -975,7 +1026,10 @@ class TwoFactorProviderService {
 	/** 2factor authentication via OpenId */
 	const TWO_FACTOR_OPENID = 'openid';
 
-	private $config;
+	/** date format when remembering devices */
+	const DEVICE_REMEMBER_DATE_FORMAT = 'Y-m-d H:i:s';
+
+	private TwoFactorConfiguration $config;
 
 	/**
 	 * Constructor.
@@ -996,7 +1050,7 @@ class TwoFactorProviderService {
 	 *
 	 * @param string $type authentication type
 	 * @return TwoFactorProvider provider
-	 * @throws \Exception unable to get provider
+	 * @throws Exception unable to get provider
 	 */
 	public function getProvider() {
 		if ($this->config->twoFactorAuthentication == TwoFactorProviderService::TWO_FACTOR_PRIVACYIDEA) {
@@ -1017,7 +1071,93 @@ class TwoFactorProviderService {
 		elseif ($this->config->twoFactorAuthentication == TwoFactorProviderService::TWO_FACTOR_OPENID) {
 			return new OpenIdProvider($this->config);
 		}
-		throw new \Exception('Invalid provider: ' . $this->config->twoFactorAuthentication);
+		throw new Exception('Invalid provider: ' . $this->config->twoFactorAuthentication);
+	}
+
+	/**
+	 * Remembers the users device.
+	 *
+	 * @param string $user user name
+	 * @throws Exception error getting provider
+	 */
+	public function rememberDevice(string $user): void {
+		if (!$this->getProvider()->supportsToRememberDevice()) {
+			logNewMessage(LOG_ERR, 'The selected 2FA provider does not support to remember devices.');
+			return;
+		}
+		if (empty($this->config->twoFactorRememberDevicePassword)) {
+			logNewMessage(LOG_ERR, 'The selected 2FA password to remember devices is empty.');
+			return;
+		}
+		$dataToEncrypt = array(
+			'user' => $user,
+			'timestamp' => getFormattedTime(self::DEVICE_REMEMBER_DATE_FORMAT)
+		);
+		$iv = openssl_random_pseudo_bytes(16);
+		$encryptedData = openssl_encrypt(json_encode($dataToEncrypt), lamEncryptionAlgo(),
+			$this->config->twoFactorRememberDevicePassword, 0, $iv);
+		$data = array(
+			'iv' => base64_encode($iv),
+			'data' => base64_encode($encryptedData)
+		);
+		$cookieOptions = lamDefaultCookieOptions();
+		$cookieOptions['expires'] = time() + intval($this->config->twoFactorRememberDeviceDuration);
+		setcookie('lam_remember_2fa', json_encode($data), $cookieOptions);
+	}
+
+	/**
+	 * Returns if the user has selected to save the device before.
+	 *
+	 * @param string $user user name
+	 * @return bool valid remembered device
+	 * @throws Exception error getting provider
+	 */
+	public function isValidRememberedDevice(string $user): bool {
+		if (!$this->getProvider()->supportsToRememberDevice()) {
+			logNewMessage(LOG_ERR, 'The selected 2FA provider does not support to remember devices.');
+			return false;
+		}
+		if (empty($this->config->twoFactorRememberDevicePassword)) {
+			logNewMessage(LOG_ERR, 'The selected 2FA password to remember devices is empty.');
+			return false;
+		}
+		if (empty($this->config->twoFactorRememberDeviceDuration)) {
+			logNewMessage(LOG_ERR, 'The selected 2FA duration to remember devices is empty.');
+			return false;
+		}
+		if (!isset($_COOKIE['lam_remember_2fa'])) {
+			return false;
+		}
+		$data = json_decode($_COOKIE['lam_remember_2fa'], true);
+		if (($data === null) || empty($data['iv']) || empty($data['data'])) {
+			return false;
+		}
+		$iv = base64_decode($data['iv']);
+		$decryptedData = openssl_decrypt(base64_decode($data['data']), lamEncryptionAlgo(),
+			$this->config->twoFactorRememberDevicePassword, 0, $iv);
+		if ($decryptedData === false) {
+			return false;
+		}
+		$decryptedData = json_decode($decryptedData, true);
+		if (!isset($decryptedData['user'])) {
+			return false;
+		}
+		if ($decryptedData['user'] !== $user) {
+			logNewMessage(LOG_DEBUG, 'User name for remembered device does not match. ' . $user . ' - ' . $decryptedData['user']);
+			return false;
+		}
+		try {
+			$acceptedTime = new DateTime('now', getTimeZone());
+			$acceptedTime = $acceptedTime->sub(new DateInterval('PT' . $this->config->twoFactorRememberDeviceDuration . 'S'));
+			$deviceDate = DateTime::createFromFormat(self::DEVICE_REMEMBER_DATE_FORMAT, $decryptedData['timestamp'], getTimeZone());
+			if ($deviceDate > $acceptedTime) {
+				return true;
+			}
+		}
+		catch (Exception $e) {
+			logNewMessage(LOG_ERR, 'Unable to check remembered device of ' . $user . ': ' . $e->getMessage());
+		}
+		return false;
 	}
 
 	/**
@@ -1026,7 +1166,7 @@ class TwoFactorProviderService {
 	 * @param selfServiceProfile $profile profile
 	 * @return TwoFactorConfiguration configuration
 	 */
-	private function getConfigSelfService(&$profile) {
+	private function getConfigSelfService(&$profile): TwoFactorConfiguration {
 		$tfConfig = new TwoFactorConfiguration();
 		$tfConfig->isSelfService = true;
 		$tfConfig->twoFactorAuthentication = $profile->twoFactorAuthentication;
@@ -1068,7 +1208,7 @@ class TwoFactorProviderService {
 	 * @param LAMConfig $conf configuration
 	 * @return TwoFactorConfiguration configuration
 	 */
-	private function getConfigAdmin($conf) {
+	private function getConfigAdmin($conf): TwoFactorConfiguration {
 		$tfConfig = new TwoFactorConfiguration();
 		$tfConfig->isSelfService = false;
 		$tfConfig->twoFactorAuthentication = $conf->getTwoFactorAuthentication();
@@ -1097,6 +1237,13 @@ class TwoFactorProviderService {
 				|| ($tfConfig->twoFactorAuthentication == TwoFactorProviderService::TWO_FACTOR_OPENID)) {
 			$tfConfig->twoFactorAuthenticationSerialAttributeName = strtolower($conf->getTwoFactorAuthenticationAttribute());
 		}
+		if (($tfConfig->twoFactorAuthentication == TwoFactorProviderService::TWO_FACTOR_PRIVACYIDEA)
+			|| ($tfConfig->twoFactorAuthentication == TwoFactorProviderService::TWO_FACTOR_WEBAUTHN)
+			|| ($tfConfig->twoFactorAuthentication == TwoFactorProviderService::TWO_FACTOR_YUBICO)) {
+			$tfConfig->twoFactorAllowToRememberDevice = strtolower($conf->getTwoFactorAllowToRememberDevice());
+			$tfConfig->twoFactorRememberDeviceDuration = strtolower($conf->getTwoFactorRememberDeviceDuration());
+			$tfConfig->twoFactorRememberDevicePassword = strtolower($conf->getTwoFactorRememberDevicePassword());
+		}
 		return $tfConfig;
 	}
 
@@ -1112,41 +1259,56 @@ class TwoFactorConfiguration {
 	/**
 	 * @var bool is self service
 	 */
-	public $isSelfService = false;
+	public bool $isSelfService = false;
 
 	/**
-	 * @var string provider id
+	 * @var ?string provider id
 	 */
-	public $twoFactorAuthentication = null;
+	public ?string $twoFactorAuthentication = null;
 
 	/**
 	 * @var string|array service URL(s)
 	 */
-	public $twoFactorAuthenticationURL = null;
+	public mixed $twoFactorAuthenticationURL = null;
 
 	/**
-	 * @var disable certificate check
+	 * @var bool disable certificate check
 	 */
-	public $twoFactorAuthenticationInsecure = false;
+	public bool $twoFactorAuthenticationInsecure = false;
 
 	/**
-	 * @var client ID for API access
+	 * @var ?string client ID for API access
 	 */
-	public $twoFactorAuthenticationClientId = null;
+	public ?string $twoFactorAuthenticationClientId = null;
 
 	/**
-	 * @var secret key for API access
+	 * @var ?string secret key for API access
 	 */
-	public $twoFactorAuthenticationSecretKey = null;
+	public ?string $twoFactorAuthenticationSecretKey = null;
 
 	/**
-	 * @var LDAP attribute name that stores the token serials
+	 * @var ?string LDAP attribute name that stores the token serials
 	 */
-	public $twoFactorAuthenticationSerialAttributeName = null;
+	public ?string $twoFactorAuthenticationSerialAttributeName = null;
 
 	/**
 	 * @var bool 2FA is optional
 	 */
-	public $twoFactorAuthenticationOptional = false;
+	public bool $twoFactorAuthenticationOptional = false;
+
+	/**
+	 * @var bool allow to remember 2nd factor
+	 */
+	public bool $twoFactorAllowToRememberDevice = false;
+
+	/**
+	 * @var string duration for remembering
+	 */
+	public string $twoFactorRememberDeviceDuration = '';
+
+	/**
+	 * @var string password for remembering
+	 */
+	public string $twoFactorRememberDevicePassword = '';
 
 }
